--- a/src/app/pages/book-list-page/book-list-page.component.html
+++ b/src/app/pages/book-list-page/book-list-page.component.html
@@ -1,3 +1,5 @@
 <div>
+    <app-header></app-header>
+    <app-seach (updateSerch)="update()"></app-seach>
     <app-book-line *ngFor="let book of bookList" [book]="book"></app-book-line>
 </div>
