--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,6 @@
-@font-face {
-	font-family: 'RobotoRegular';
-	src: url('/assets/fonts/RobotoRegular/RobotoRegular.eot');
-	src: url('/assets/fonts/RobotoRegular/RobotoRegular.eot?#iefix') format('embedded-opentype'),
-	url('/assets/fonts/RobotoRegular/RobotoRegular.woff') format('woff'),
-	url('/assets/fonts/RobotoRegular/RobotoRegular.ttf') format('truetype');
-	font-style: normal;
-	font-weight: normal;
+.main{
+    max-width: 900px;
+    margin: 30px auto;
+	min-width: 450px;
+	background-color: white;
 }
-
-*{font-family: "RobotoRegular", sans-serif; font-size: 16px; line-height: 1;}
